default/objects/Collateral_Info__c/Collateral_Info__c.object-meta.xml
<CustomObject>
    <label>Collateral Info</label>
    <nameField>
        <displayFormat>C-{00000}</displayFormat>
        <label>Collateral Pledged Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collateral Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>