default/objects/Collateral_Info__c/fields/Collateral_Description__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Description__c</fullName>
    <label>Collateral Description</label>
    <type>TextArea</type>
</CustomField>