default/objects/Collateral_Info__c/fields/Collateral_Type__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Type__c</fullName>
    <label>Collateral Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Investment Account</fullName>
            </value>
            <value>
                <fullName>Saving Account</fullName>
            </value>
            <value>
                <fullName>Equity Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>