default/objects/Collateral_Info__c/fields/Collateral_Value__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Value__c</fullName>
    <label>Collateral_Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>