default/objects/Collateral_Info__c/fields/Residential_Loan_Application__c.field-meta.xml
<CustomField>
    <fullName>Residential_Loan_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Residential Loan Application</label>
    <referenceTo>ResidentialLoanApplication</referenceTo>
    <relationshipLabel>Collateral Info</relationshipLabel>
    <relationshipName>Collateral_Info</relationshipName>
    <type>Lookup</type>
</CustomField>